  * Created a class for holding Reactor and Server configurations.
    This is much nicer than passing in individual args or a hash.
    
  * Added the ZM::Servers module to make building servers a little
    easier. The biggest improvement is for making servers that
    utilize XREP/ROUTER sockets since the module handles the 
    splitting of the routing envelope messages from the body.

== 0.6.0 / 2011-10-04
  * Compatibility with ffi-rzmq 0.9.0 and added some conditional
    logic to support 0mq 2.1.x and 3.x APIs.
  
  * Removed all exceptions and replaced them with return codes.

  * Added :exception_handler key to Reactor#new so exceptions can
    be managed by user code.

== 0.5.2 / 2011-07-21
  * Added PUSH and PULL socket types. Never needed them until now.
  * Added a +context+ reader to the Reactor class.
  * Changed default behavior for all sockets to use ZMQ:LINGER 1
    as a socket option. By default, this prevents a call to
    #close from hanging forever if there are unsent messages in
    queue.
  * Expose #logger accessor (read-only). 
  * Refactored Reactor#log so that most of the work is performed in 
    the LogClient (tell, don't ask!).
  * Added LogClient#puts so that a logger instance can be passed to
    other objects who expect an IO-like object that responds to #puts.
    
== 0.5.1 / 2011-05-03
  * Added Reactor#oneshot_timer_at for scheduling a timer to fire at
    an exact time.
  * Changed Reactor#next_tick to use #shift instead of #pop for running
    blocks. Originally it was running the blocks in the reverse order
    that #next_tick was called. Blocks are now run in the *same* order
    as they were created by a call to #next_tick.
  * Added a timestamp to all messages created using Reactor#log.
  
== 0.5.0 / 2011-03-3
  * Changed the constructor for the ZM::Reactor class. It now takes
    an optional third hash argument. One of the keys that it uses
    is :zeromq_context. This allows a user to create a master 0mq